[workspace]
resolver = "2"
members = [
    "contracts/*",
]

[workspace.package]
authors = ["Consulting Manao GmbH"]
edition = "2024"
license = "BSD-3"
repository = "https://radicle.network/nodes/radicle.consulting-manao.com/rad%3AzssaAF91kxuquZmZCV2SiK2FNX6s"

[workspace.dependencies]
soroban-sdk = { version = "27.0.0" }
# features = ["experimental_spec_shaking_v2"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
